feat: updated popup
+ 팝업 색 클래스 지정 방법, HEX 색 지정, 콘텐츠 정렬

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -106,12 +106,12 @@
     </section>
 
 
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div class="toast-container position-fixed bottom-0 start-50 translate-middle">
         <dds-popup
-            popup-title="테스트 팝업"
             popup-id="myToastEl"
             popup-delay="5000"
-            popup-autohide="true">안녕하세요. 테스트 팝업이에요.
+            popup-autohide="false"
+            popup-style-colorhex="#ffffffba">  <div class="text-center font-weight-md ">안녕하세요. 테스트 팝업이에요.</div> 
         </dds-popup>
 
     </div>
