--- a/views/partials/pages/components/popup.hbs
+++ b/views/partials/pages/components/popup.hbs
@@ -24,3 +24,114 @@
 
     &lt;/dds-popup&gt;
 &lt;/div&gt;</code></pre>
+
+<br>
+<h2 class="h4 fw-bolder font-weight-md mt-2">콘텐츠만 </h2>
+<p class="font-weight-sm mb-4">
+    콘텐츠만 불러와요
+</p>
+
+<pre>
+    <div class="toast-container">
+        <dds-popup
+            popup-id="myToastEl"
+            popup-delay="5000"
+            popup-autohide="false">안녕하세요. 콘텐츠테스트 팝업이에요.
+        </dds-popup>
+    </div>
+</pre>
+
+<pre class="mt-4"><code data-language="html">&lt;div class=&quot;toast-container position-fixed bottom-0 end-0 p-3&quot;&gt;
+    &lt;dds-popup
+        popup-id=&quot;myToastEl&quot;
+        popup-delay=&quot;5000&quot;
+        popup-autohide=&quot;false&quot;&gt;안녕하세요. 콘텐츠테스트 팝업이에요.
+    &lt;/dds-popup&gt;
+&lt;/div&gt;</code></pre>
+
+
+<br>
+<h2 class="h4 fw-bolder font-weight-md mt-2">색 클래스 지정 </h2>
+<p class="font-weight-sm mb-4">
+    색 클래스를 지정헤요.
+</p>
+
+<pre>
+    <div class="toast-container">
+        <dds-popup
+            popup-id="myToastEl"
+            popup-delay="5000"
+            popup-autohide="false"
+            popup-class-color="bg-dark"
+            popup-class-textcolor="text-light">안녕하세요. 테스트 팝업이에요.
+        </dds-popup>
+    </div>
+</pre>
+
+<pre class="mt-4"><code data-language="html">&lt;div class=&quot;toast-container position-fixed bottom-0 end-0 p-3&quot;&gt;
+    &lt;dds-popup
+        popup-id=&quot;myToastEl&quot;
+        popup-delay=&quot;5000&quot;
+        popup-autohide=&quot;false&quot;
+        popup-class-color=&quot;bg-dark&quot;
+        popup-class-textcolor=&quot;text-light&quot;&gt;안녕하세요. 테스트 팝업이에요.
+    &lt;/dds-popup&gt;
+&lt;/div&gt;</code></pre>
+
+<br>
+<h2 class="h4 fw-bolder font-weight-md mt-2">색 HEX 지정 </h2>
+<p class="font-weight-sm mb-4">
+    색 HEX를 지정헤요.
+</p>
+
+<pre>
+    <div class="toast-container">
+        <dds-popup
+            popup-id="myToastEl"
+            popup-delay="5000"
+            popup-autohide="false"
+            popup-class-textcolor="text-light"
+            popup-style-colorhex="#5A6169ba">안녕하세요. 테스트 팝업이에요.
+        </dds-popup>
+    </div>
+</pre>
+
+<pre class="mt-4"><code data-language="html">&lt;div class=&quot;toast-container position-fixed bottom-0 end-0 p-3&quot;&gt;
+    &lt;dds-popup
+        popup-id=&quot;myToastEl&quot;
+        popup-delay=&quot;5000&quot;
+        popup-autohide=&quot;false&quot;
+        popup-class-textcolor=&quot;text-light&quot;
+        popup-style-colorhex=&quot;#5A6169ba&quot;&gt;안녕하세요. 테스트 팝업이에요.
+    &lt;/dds-popup&gt;
+&lt;/div&gt;</code></pre>
+
+
+
+<br>
+<h2 class="h4 fw-bolder font-weight-md mt-2">가운데 정렬 </h2>
+<p class="font-weight-sm mb-4">
+    색 HEX를 지정헤요.
+</p>
+
+<pre>
+    <div class="toast-container ">
+        <dds-popup
+            popup-id="myToastEl"
+            popup-delay="5000"
+            popup-autohide="false"
+            popup-style-colorhex="#ffffffba">  <div class="text-center font-weight-md ">안녕하세요. 테스트 팝업이에요.</div> 
+        </dds-popup>
+
+    </div>
+</pre>
+
+<pre class="mt-4"><code data-language="html">&lt;div class=&quot;toast-container position-fixed bottom-0 start-50 translate-middle&quot;&gt;
+    &lt;dds-popup
+        popup-id=&quot;myToastEl&quot;
+        popup-delay=&quot;5000&quot;
+        popup-autohide=&quot;false&quot;
+        popup-style-colorhex=&quot;#ffffffba&quot;&gt;  &lt;div class=&quot;text-center font-weight-md &quot;&gt;안녕하세요. 테스트 팝업이에요.&lt;/div&gt; 
+    &lt;/dds-popup&gt;
+
+&lt;/div&gt;</code></pre>
