feat: added badge
+ 뱃지 추가

--- a/src/scss/assets/_button.scss
+++ b/src/scss/assets/_button.scss
@@ -79,3 +79,12 @@
     $color-300: $yellow-300
   ) {}
 }
+
+.btn-transparent {
+  background-color: transparent !important;
+}
+
+.btn-inline {
+  padding: 0px !important;
+
+}
