--- a/src/scss/assets/foundation/_color.scss
+++ b/src/scss/assets/foundation/_color.scss
@@ -17,5 +17,10 @@ $yellow-300: #cc9a06 !default;
 
 $light-100: #f2f4f5 !default;
 $light-200: #dbdee0 !default;
+
 $dark: #212529 !default;
 
+
+$dark-100: #646667 !default;
+$dark-300: #333637 !default;
+$dark-500: #212529 !default;
