--- a/views/partials/pages/components/button.hbs
+++ b/views/partials/pages/components/button.hbs
@@ -2,6 +2,8 @@
 <p class="font-weight-sm mb-4">
     라이트 테마에서의 버튼 디자인은 파스텔톤 위주의 컬러를 권고합니다.
     색상은 primary(blue), success(green), light(white), dark(black) 을 지원합니다. 
+    <button class="btn btn-inline">인라인 버튼이에요!</button>
+
 </p>
 
 
@@ -11,6 +13,9 @@
 <button class="btn btn-yellow">Yellow</button>
 <button class="btn btn-light">Light</button>
 <button class="btn btn-dark">Dark</button>
+<button class="btn btn-transparent">Transparent</button>
+<button class="btn btn-inline">Inline</button>
+
 
 <pre class="mt-4"><code data-language="html">
 <button class="btn btn-blue">Blue</button>
@@ -18,5 +23,7 @@
 <button class="btn btn-red">Red</button>
 <button class="btn btn-yellow">Yellow</button>
 <button class="btn btn-light" >Light</button>
-<button class="btn btn-dark">Dark</button></code></pre>
+<button class="btn btn-dark">Dark</button>
+<button class="btn btn-transparent">Transparent</button>
+<button class="btn btn-inline">Inline</button></code></pre>
 
