--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,6 +47,7 @@
                         <dds-navtab-item item-id="modal" is-selected="false"></dds-navtab-item>
                         <dds-navtab-item item-id="popup" is-selected="false"></dds-navtab-item>
                         <dds-navtab-item item-id="sidebar" is-selected="false"></dds-navtab-item>
+                        <dds-navtab-item item-id="table" is-selected="false"></dds-navtab-item>
 
 
                     </dds-navtab>
@@ -103,7 +104,9 @@
                     </div>
 
 
-                    
+                    <div class="tab-pane fade" id="v-pills-table" role="tabpanel" aria-labelledby="v-pills-table-tab">
+{{> pages/components/table}}
+                    </div> 
 
 
 
