--- a/views/partials/pages/components/badge.hbs
+++ b/views/partials/pages/components/badge.hbs
@@ -4,19 +4,35 @@
 </p>
 
 
-<span class="badge bg-blue text-primary">Blue</span>
-<span class="badge bg-green text-success">Green</span>
-<span class="badge bg-red text-danger">Red</span>
-<span class="badge bg-yellow text-warning">Yellow</span>
+<span class="badge badge-blue-tint">Blue Tint</span>
+<span class="badge badge-blue-fill">Blue Fill</span>
+
+<span class="badge badge-green-tint">Green Tint</span>
+<span class="badge badge-green-fill">Green Fill</span>
+
+<span class="badge badge-red-tint">Red Tint</span>
+<span class="badge badge-red-fill">Red Fill</span>
+
+<span class="badge badge-yellow-tint">Yellow Tint</span>
+<span class="badge badge-yellow-fill">Yellow Fill</span>
+
 <span class="badge bg-light text-dark">Light</span>
 <span class="badge bg-dark text-light">Dark</span>
 
 
 <pre class="mt-4"><code data-language="html">
-<span class="badge bg-blue text-primary">Blue</span>
-<span class="badge bg-green text-success">Green</span>
-<span class="badge bg-red text-danger">Red</span>
-<span class="badge bg-yellow text-warning">Yellow</span>
+<span class="badge badge-blue-tint">Blue Tint</span>
+<span class="badge badge-blue-fill">Blue Fill</span>
+
+<span class="badge badge-green-tint">Green Tint</span>
+<span class="badge badge-green-fill">Green Fill</span>
+
+<span class="badge badge-red-tint">Red Tint</span>
+<span class="badge badge-red-fill">Red Fill</span>
+
+<span class="badge badge-yellow-tint">Yellow Tint</span>
+<span class="badge badge-yellow-fill">Yellow Fill</span>
+
 <span class="badge bg-light text-dark">Light</span>
 <span class="badge bg-dark text-light">Dark</span></code></pre>
 
