--- a/views/partials/pages/components/button.hbs
+++ b/views/partials/pages/components/button.hbs
@@ -7,10 +7,18 @@
 </p>
 
 
-<button class="btn btn-blue">Blue</button>
-<button class="btn btn-green">Green</button>
-<button class="btn btn-red">Red</button>
-<button class="btn btn-yellow">Yellow</button>
+<button class="btn btn-blue-tint">Blue Tint</button>
+<button class="btn btn-blue-fill">Blue Fill</button>
+
+<button class="btn btn-green-tint">Green Tint</button>
+<button class="btn btn-green-fill">Green Fill</button>
+
+<button class="btn btn-red-tint">Red Tint</button>
+<button class="btn btn-red-fill">Red Fill</button>
+
+<button class="btn btn-yellow-tint">Yellow Tint</button>
+<button class="btn btn-yellow-fill">Yellow Fill</button>
+
 <button class="btn btn-light">Light</button>
 <button class="btn btn-dark">Dark</button>
 <button class="btn btn-transparent">Transparent</button>
@@ -18,10 +26,17 @@
 
 
 <pre class="mt-4"><code data-language="html">
-<button class="btn btn-blue">Blue</button>
-<button class="btn btn-green">Green</button>
-<button class="btn btn-red">Red</button>
-<button class="btn btn-yellow">Yellow</button>
+<button class="btn btn-blue-tint">Blue Tint</button>
+<button class="btn btn-blue-fill">Blue Fill</button>
+
+<button class="btn btn-green-tint">Green Tint</button>
+<button class="btn btn-green-fill">Green Fill</button>
+
+<button class="btn btn-red-tint">Red Tint</button>
+<button class="btn btn-red-fill">Red Fill</button>
+
+<button class="btn btn-yellow-tint">Yellow Tint</button>
+<button class="btn btn-yellow-fill">Yellow Fill</button>
 <button class="btn btn-light" >Light</button>
 <button class="btn btn-dark">Dark</button>
 <button class="btn btn-transparent">Transparent</button>
