--- a/src/scss/assets/foundation/_color.scss
+++ b/src/scss/assets/foundation/_color.scss
@@ -1,19 +1,24 @@
 $blue-100: #dbe9fd !default;
 $blue-200: #cadbf7 !default;
 $blue-300: #0c74f3 !default;
+$blue-400: #0a58ca !default;
 $blue-500: #062a5c !default;
 
 $green-100: #ccf2e1 !default;
 $green-200: #b2e4cb !default;
-$green-300: #13b566 !default;
+$green-300: #198754 !default;
+$green-400: #146c43 !default;
 
 $red-100: #fddbdb !default;
 $red-200: #f2cfcf !default;
-$red-300: #be2b0a !default;
+$red-300: #dc3545 !default;
+$red-400: #b02a37 !default;
 
 $yellow-100: #fff3cd !default;
 $yellow-200: #ffe69ccc !default;
 $yellow-300: #cc9a06 !default;
+$yellow-400: #997404 !default;
+
 
 $light-100: #f2f4f5 !default;
 $light-200: #dbdee0 !default;
