--- a/views/static/guide.hbs
+++ b/views/static/guide.hbs
@@ -36,6 +36,7 @@
                         <dds-navtab-item item-id="principle" is-selected="false"></dds-navtab-item>
 
                         <dds-navtab-item item-id="typo" is-selected="false"></dds-navtab-item>
+                        <dds-navtab-item item-id="color-class" is-selected="false"></dds-navtab-item>
 
 
                     </dds-navtab>
@@ -49,7 +50,9 @@
                     <div class="tab-pane fade show" id="v-pills-typo" role="tabpanel" aria-labelledby="v-pills-typo-tab">
 {{> pages/guides/typo}}
                     </div>
-
+                    <div class="tab-pane fade show" id="v-pills-color-class" role="tabpanel" aria-labelledby="v-pills-color-class-tab">
+{{> pages/guides/colorclass}}
+                    </div>
 
                     
 
