feat: added dist/handle.js for popup
+ dds.popup() JS로 팝업 여는 기능 추가

--- a/views/partials/pages/components/popup.hbs
+++ b/views/partials/pages/components/popup.hbs
@@ -135,3 +135,22 @@
     &lt;/dds-popup&gt;
 
 &lt;/div&gt;</code></pre>
+
+
+
+
+
+
+<br>
+<h2 class="h4 fw-bolder font-weight-md mt-2">JS Handle </h2>
+<p class="font-weight-sm mb-4">
+    자바스크립트 핸들링 이에요. 팝업을 자동으로 생성해요
+</p>
+
+<button class="btn btn-blue-tint" onclick="dds.popup({content: '<i class=\'fas fa-ad\'></i> 테스트인데, 폰트어썸이 들어간.'})">go</button>
+
+
+<pre class="mt-4"><code data-language="javascript">dds.popup({
+    content: '테스트 테스트'
+})</code></pre>
+
