refactor: renamed a toast component
+ 컴포넌트 이름 변경 (팝업->토스트)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@
 @import 'assets/modal';
 @import 'assets/form';
 @import 'assets/offcanvas';
-@import 'assets/popup';
+@import 'assets/toast';
 @import 'assets/color';
 @import 'assets/dropdown';
 @import 'assets/background';
