--- a/views/partials/pages/components/modal.hbs
+++ b/views/partials/pages/components/modal.hbs
@@ -74,14 +74,10 @@ modal-subtitle=&quot;인풋태그 외에도 다양하게 추가할 수 있어요
 </code></pre>
 
 <br>
-
-
 <h2 class="h4 fw-bolder font-weight-md mt-2">모달 정렬</h2>
 <p class="font-weight-sm mb-4">
     정렬이에요. 기본적으로 center를 지원하죠. end, start도 추가했어요.
 </p>
-
-
 
 <button type="button" class="btn btn-blue mt-2" data-bs-toggle="modal" data-bs-target="#ccc">
 Launch demo modal
@@ -110,6 +106,45 @@ modal-align="end">
 
         &lt;dds-modal-button button-color=&quot;btn-blue&quot; button-text-color=&quot;text-primary&quot; is-dismiss=&quot;false&quot;&gt;저장&lt;/dds-modal-button&gt;
         &lt;dds-modal-button button-color=&quot;btn-light&quot; button-text-color=&quot;text-dark&quot; is-dismiss=&quot;true&quot;&gt;취소&lt;/dds-modal-button&gt;
+&lt;/dds-modal&gt;
+</code></pre>
+
+
+
+
+<br>
+<h2 class="h4 fw-bolder font-weight-md mt-2">모달내 콘텐츠 정렬</h2>
+<p class="font-weight-sm mb-4">
+    앞서 모달 자체의 위치를 정렬했다면, 이번에는 모달 내 컨텐츠 정렬이에요. 모달의 디자인 다양성과 편리성, 가독성을 위해 도전을 계속되죠. 
+</p>
+
+<button type="button" class="btn btn-blue mt-2" data-bs-toggle="modal" data-bs-target="#ddd">
+Launch demo modal
+</button>
+
+<dds-modal
+modal-id="ddd"
+modal-title="정렬된 모달이에요."
+modal-subtitle="명품 프로덕트의 시작은 언제나 모달이죠."
+content-align="center">
+    <dds-modal-button button-color="btn-blue" button-text-color="text-primary" button-arrangement="col" is-dismiss="false">저장</dds-modal-button>
+    <dds-modal-button button-color="btn-light" button-text-color="text-dark" button-arrangement="col" is-dismiss="true">취소</dds-modal-button>
+</dds-modal>
+
+                        
+<pre class="mt-4"><code data-language="html">
+&lt;button type=&quot;button&quot; class=&quot;btn btn-primary mt-2&quot; data-bs-toggle=&quot;modal&quot; data-bs-target=&quot;#aaa&quot;&gt;
+    Launch demo modal
+&lt;/button&gt;
+
+&lt;dds-modal
+    modal-id=&quot;aaa&quot;
+    modal-title=&quot;테스트 모달이에요.&quot;
+    modal-subtitle=&quot;명품 프로덕트의 시작은 언제나 모달이죠.&quot;
+    content-align=&quot;end&quot;&gt;
+
+        &lt;dds-modal-button button-color=&quot;btn-blue&quot; button-text-color=&quot;text-primary&quot; button-arrangement=&quot;col&quot; is-dismiss=&quot;false&quot;&gt;저장&lt;/dds-modal-button&gt;
+        &lt;dds-modal-button button-color=&quot;btn-light&quot; button-text-color=&quot;text-dark&quot; button-arrangement=&quot;col&quot; is-dismiss=&quot;true&quot;&gt;취소&lt;/dds-modal-button&gt;
 &lt;/dds-modal&gt;
 </code></pre>
 
