feat: added tag input
+ 태그 입력 추가

--- a/views/partials/pages/components/input.hbs
+++ b/views/partials/pages/components/input.hbs
@@ -15,6 +15,7 @@
 </div>
 </code></pre>
 
+<br>
 <h2 class="h4 fw-bolder font-weight-md mt-2">입력 </h2>
 
 <p class="font-weight-sm mb-4">
@@ -58,3 +59,23 @@
     <button class="btn btn-green"> <i class="fas fa-arrow-right"></i> </button>
 </div>
 </code></pre>
+
+
+
+<br>
+<h2 class="h4 fw-bolder font-weight-md mt-2">태그 입력 </h2>
+
+<p class="font-weight-sm mb-4">
+    블로그의 태그를 입력받거나, 사용자 입력을 배열로 받아야 할 때 쓰이는 엘리먼트에요. 요소를 클릭하면 제거되죠.
+</p>
+
+
+<dds-input-tag tag-id="thisisid"></dds-input-tag>
+
+
+<pre class="mt-4"><code data-language="html">&lt;dds-input-tag tag-id=&quot;thisisid&quot;&gt;&lt;/dds-input-tag&gt;
+</code></pre>
+
+<pre class="mt-4"><code data-language="javascript">document.getElementById('input_tag_thisisid').parentNode.tags</code></pre>
+
+
