feat: added modal scrollable
+ 모달 콘텐츠 스크롤, footer 버튼 fixed

--- a/views/partials/pages/components/modal.hbs
+++ b/views/partials/pages/components/modal.hbs
@@ -148,3 +148,64 @@ content-align="center">
 &lt;/dds-modal&gt;
 </code></pre>
 
+
+
+
+<br>
+<h2 class="h4 fw-bolder font-weight-md mt-2">길이가 긴 모달</h2>
+<p class="font-weight-sm mb-4">
+    레전드, 길이가 급나 길어. 모든 콘텐츠를 담기에는 모달이가 너무너무 작아서, 아래에 있는 버튼 클릭을 못 할 때.
+    어김없이 찾아오는 길이가 긴 모달을 위한 안성맞춤.
+    바로바로 스크로블..!!
+</p>
+
+<button type="button" class="btn btn-blue mt-2" data-bs-toggle="modal" data-bs-target="#eee">
+Launch content modal
+</button>
+
+<dds-modal
+modal-id="eee"
+modal-title="스크롤 모달이에요."
+modal-subtitle="길어요. 좀 많이 길어요"
+is-scrollable="true">
+    <dds-content>
+        <div class="mb-3">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Diam donec adipiscing tristique risus nec. Nulla facilisi cras fermentum odio eu feugiat. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Ac auctor augue mauris augue neque gravida in fermentum et. Eu facilisis sed odio morbi. Purus faucibus ornare suspendisse sed nisi lacus sed. Urna nec tincidunt praesent semper. Euismod lacinia at quis risus sed vulputate odio. Lectus proin nibh nisl condimentum id venenatis.
+
+Risus viverra adipiscing at in tellus integer feugiat. Semper auctor neque vitae tempus quam pellentesque nec nam. Massa eget egestas purus viverra. Arcu dictum varius duis at consectetur lorem. Sit amet nisl suscipit adipiscing bibendum. Adipiscing elit duis tristique sollicitudin. Tempor id eu nisl nunc mi ipsum faucibus. Massa sed elementum tempus egestas sed. Id porta nibh venenatis cras. Nunc sed blandit libero volutpat sed cras ornare. Nisl tincidunt eget nullam non. Purus non enim praesent elementum. Enim nulla aliquet porttitor lacus luctus accumsan tortor posuere ac. Cras sed felis eget velit aliquet sagittis id.
+
+At erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Volutpat maecenas volutpat blandit aliquam etiam erat. Lorem mollis aliquam ut porttitor leo a diam sollicitudin. Dui accumsan sit amet nulla facilisi morbi. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Risus quis varius quam quisque id diam vel quam. At urna condimentum mattis pellentesque id nibh tortor id. Ut tellus elementum sagittis vitae et leo duis ut diam. Eget velit aliquet sagittis id consectetur. Sed blandit libero volutpat sed cras ornare arcu dui. Non tellus orci ac auctor augue mauris augue. Odio ut sem nulla pharetra diam. Tincidunt lobortis feugiat vivamus at augue eget arcu. Orci eu lobortis elementum nibh.
+
+Elit ut aliquam purus sit amet luctus venenatis lectus magna. Eu sem integer vitae justo. Gravida in fermentum et sollicitudin ac orci. Sed sed risus pretium quam. Vitae ultricies leo integer malesuada nunc vel risus. Nisl condimentum id venenatis a. Consectetur a erat nam at lectus urna duis convallis. Eget dolor morbi non arcu. Dis parturient montes nascetur ridiculus mus mauris vitae. Ante in nibh mauris cursus mattis molestie. Volutpat diam ut venenatis tellus in metus vulputate eu. Facilisi morbi tempus iaculis urna id volutpat lacus. Pharetra sit amet aliquam id diam maecenas ultricies. Justo eget magna fermentum iaculis eu non diam. Eget velit aliquet sagittis id consectetur purus ut faucibus pulvinar. Elementum facilisis leo vel fringilla est. Sit amet nulla facilisi morbi. Porta non pulvinar neque laoreet suspendisse interdum consectetur.
+
+Massa id neque aliquam vestibulum morbi blandit. Scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Sapien faucibus et molestie ac feugiat sed lectus. Nec feugiat nisl pretium fusce id velit ut tortor pretium. Diam vulputate ut pharetra sit. Lectus quam id leo in vitae turpis massa sed. Tempor orci eu lobortis elementum nibh tellus molestie nunc non. Sed risus pretium quam vulputate dignissim suspendisse. Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Egestas maecenas pharetra convallis posuere morbi leo. In eu mi bibendum neque egestas congue quisque egestas. Tellus mauris a diam maecenas. Quis imperdiet massa tincidunt nunc. Dolor sit amet consectetur adipiscing elit ut aliquam purus sit. Ornare massa eget egestas purus viverra. Nam at lectus urna duis convallis convallis tellus id. Sagittis aliquam malesuada bibendum arcu vitae. Nullam eget felis eget nunc lobortis. Et netus et malesuada fames ac turpis egestas integer.
+
+Mollis nunc sed id semper risus in hendrerit. Pellentesque nec nam aliquam sem et tortor. Ornare arcu dui vivamus arcu felis bibendum ut. Sed nisi lacus sed viverra tellus in hac habitasse platea. Quisque egestas diam in arcu cursus. Quis hendrerit dolor magna eget est lorem ipsum. Rutrum tellus pellentesque eu tincidunt. Ut eu sem integer vitae justo eget magna fermentum. Fermentum odio eu feugiat pretium nibh ipsum consequat. Sit amet dictum sit amet justo donec. Est ante in nibh mauris cursus mattis. Porttitor lacus luctus accumsan tortor. Elementum sagittis vitae et leo duis ut diam quam. Pellentesque diam volutpat commodo sed. Risus at ultrices mi tempus imperdiet nulla malesuada pellentesque. Bibendum neque egestas congue quisque egestas diam in. Sit amet massa vitae tortor.
+
+Non tellus orci ac auctor augue mauris augue neque. Purus in massa tempor nec feugiat nisl pretium fusce. Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. In fermentum et sollicitudin ac. Netus et malesuada fames ac turpis egestas sed tempus urna. Id venenatis a condimentum vitae. Vulputate ut pharetra sit amet aliquam. Fringilla est ullamcorper eget nulla facilisi. Nunc consequat interdum varius sit amet mattis vulputate. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Volutpat est velit egestas dui id ornare arcu odio ut.
+
+Non enim praesent elementum facilisis leo. Nibh ipsum consequat nisl vel. Pharetra sit amet aliquam id diam maecenas. Dictum varius duis at consectetur lorem donec massa sapien. Vitae sapien pellentesque habitant morbi tristique senectus et. Non blandit massa enim nec dui nunc mattis. Et sollicitudin ac orci phasellus. Interdum posuere lorem ipsum dolor sit amet consectetur. Et molestie ac feugiat sed lectus vestibulum mattis. Suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Scelerisque eleifend donec pretium vulputate sapien nec sagittis. Augue interdum velit euismod in pellentesque. Mi eget mauris pharetra et ultrices neque ornare. Ultrices dui sapien eget mi proin sed libero enim. Egestas pretium aenean pharetra magna ac. Vel elit scelerisque mauris pellentesque pulvinar pellentesque. At quis risus sed vulputate. Amet justo donec enim diam vulputate ut pharetra sit. At urna condimentum mattis pellentesque. Nullam ac tortor vitae purus faucibus.
+            <input type="text" class="form-control"  placeholder="name@example.com">
+        </div>
+    </dds-content>
+    <dds-modal-button button-color="btn-light" button-text-color="text-dark" is-dismiss="true">닫기</dds-modal-button>
+</dds-modal>
+
+
+<pre class="mt-4"><code data-language="html">
+&lt;dds-modal
+modal-id=&quot;eee&quot;
+modal-title=&quot;스크롤 모달이에요.&quot;
+modal-subtitle=&quot;길어요. 좀 많이 길어요&quot;
+is-scrollable=&quot;true&quot;&gt;
+    &lt;dds-content&gt;
+        &lt;div class=&quot;mb-3&quot;&gt;
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Diam donec adipiscing tristique risus nec. Nulla facilisi cras fermentum odio eu feugiat. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Ac auctor augue mauris augue neque gravida in fermentum et. Eu facilisis sed odio morbi. Purus faucibus ornare suspendisse sed nisi lacus sed. Urna nec tincidunt praesent semper. Euismod lacinia at quis risus sed vulputate odio. Lectus proin nibh nisl condimentum id venenatis.
+
+
+            &lt;input type=&quot;text&quot; class=&quot;form-control&quot;  placeholder=&quot;name@example.com&quot;&gt;
+        &lt;/div&gt;
+    &lt;/dds-content&gt;
+    &lt;dds-modal-button button-color=&quot;btn-light&quot; button-text-color=&quot;text-dark&quot; is-dismiss=&quot;true&quot;&gt;닫기&lt;/dds-modal-button&gt;
+&lt;/dds-modal&gt;
+</code></pre>
