--- a/src/scss/assets/_modal.scss
+++ b/src/scss/assets/_modal.scss
@@ -4,11 +4,25 @@
     border-radius: $border-radius;
     border: transparent;
     box-shadow: 2px 0px 45px 6px #272d331e;
+    padding: 1.875rem 2.1875rem;
+
 }
 
 .modal-body {
-    padding: 1.875rem 2.1875rem;
+    padding: 0px;
 }
+
+.modal-bottom {
+    border-radius: $border-radius;
+
+}
+
+.modal-footer {
+    padding: 0px;
+    margin: 0px;
+
+}
+
 
 .modal-backdrop {
   
